# RAG_Evaluator

./: .gitignore  PROJECT_LOG.md  README.md  pyproject.toml  requirements.txt  setup_check.py
docs/: connecting-to-projects.md
examples/: example_test_rag_eval.py  sample_corpus.txt  sample_input.json
ragwatch/: __init__.py
ragwatch/cli/: __init__.py  main.py
ragwatch/core/: __init__.py  config.py  evaluator.py  schemas.py  scorer.py
ragwatch/engines/: __init__.py  ann_validator.py  logit_uncertainty.py  math_engine.py  nli_engine.py  self_consistency.py
ragwatch/meta_eval/: __init__.py  correlation.py  meta_evaluator.py  report.py  synthetic_cases.py
ragwatch/pytest_plugin/: __init__.py  api.py
ragwatch/utils/: __init__.py  embeddings.py  onnx_export.py  preprocessor.py  reports.py
tests/: __init__.py  _fixtures.py  conftest.py  test_ann_validator.py  test_cases.md  test_correlation.py  test_embeddings.py  test_integration.py  test_math_engine.py  test_meta_eval.py  test_nli_engine.py  test_onnx_export.py  test_preprocessor.py  test_pytest_plugin.py  test_schemas.py  test_scorer.py  test_self_consistency.py
